# pyAccountant

./: .gitignore  README.md  pyproject.toml
api/routers/: bank_accounts.py  trans_types.py  transactions.py
data/db/: banks_accounts.csv  transactions.csv  transfers_types.csv
db/: __init__.py  create.sql  inserts.py  populate.py  queries.py  views.sql
src/api/: __init__.py  main.py
src/api/routers/: bank_accounts.py  trans_types.py  transactions.py
src/db/: __init__.py  inserts.py
src/test/: test_insert.py
src/test/api/: test_transactions.py  test_types.py
src/test/db/: __init__.py  test_insert.py
test/api/: __init__.py  test_bank.py
