[tool.poetry]
name = "pyaccountant"
version = "0.1.0"
description = "A python program to manage all my accounts and financial activities"
authors = ["Jaimedgp <jaime.diez.gp@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
fastapi = "^0.89.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
